on work progress

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,30 @@
-*{
-  padding: 0%;
-  margin: 0%;
+html {
+  scroll-snap-type: y mandatory;
+}
+.App {
+  height: 100vh;
+  background-color: black;
+  display: grid;
+  place-items: center;
+}
+.app_videos {
+  position: relative;
+  margin-top: 30px;
+  height: 800px;
+  width: 80%;
+  border-radius: 20px;
+  overflow: scroll;
+  max-width: 500px;
+  scroll-snap-type: y mandatory;
+}
+
+/* hide scrolll bar from chore safari and opera */
+.app_videos::-webkit-scrollbar {
+  display: none;
+}
+
+/*hide scrollbar for IT, Edge and Firefox */
+.app_videos {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
