--- a/src/VideoFooter/VideoFooter.css
+++ b/src/VideoFooter/VideoFooter.css
@@ -14,3 +14,30 @@
 .VideoFooter_text > h3 {
   padding-bottom: 20px;
 }
+.videoFooter_ticker > .ticker {
+  height: fit-content;
+  margin-left: 30px;
+  width: 60%;
+}
+.videoFooter_icon {
+  position: absolute;
+}
+.videoFooter_ticker p {
+  padding-top: 7px;
+}
+.videoFooter_record {
+  animation: spinTheRecord infinite 5s linear;
+  height: 50px;
+  filter: invert(1);
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+}
+@keyframes spinTheRecord {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(30deg);
+  }
+}
